# world

./: .gitignore  CLI_SPEC.md  Cargo.toml  README.md  SPEC.md  install.sh
docs/: architecture.d2
plugins/browser/: dispatch.json  handler.js  handler.sh  spec.json
plugins/home/: dispatch.json  handler.js  spec.json
plugins/npm/: dispatch.json  handler.js  handler.py  spec.json
plugins/pip/: dispatch.json  handler.py  spec.json
plugins/ssh/: dispatch.json  handler.js  spec.json
shell/: init.zsh
src/: awaiting.rs  ceiling.rs  dispatch.rs  execution.rs  lib.rs  main.rs  plugin.rs  policy.rs  sampling.rs  schemas.rs  spec.rs  telemetry.rs  tool.rs
src/adapters/: mod.rs
src/adapters/linux/: mod.rs
src/adapters/macos/: brew.rs  certificate.rs  container.rs  disk.rs  log.rs  mod.rs  network.rs  package.rs  printer.rs  process.rs  service.rs
src/adapters/windows/: mod.rs
src/cli/: confirm.rs  mod.rs  output.rs  plugins.rs  verbs.rs
src/cli/addons/: mod.rs  policy.rs  verify.rs
src/contracts/: act.rs  bash.rs  handoff.rs  mod.rs  observe.rs  verify.rs
src/domains/: brew.rs  certificate.rs  container.rs  disk.rs  log.rs  mod.rs  network.rs  package.rs  printer.rs  process.rs  service.rs
src/tools/: act.rs  bash.rs  handoff.rs  mod.rs  observe.rs  verify.rs
tests/: integration.rs
tla/: AwaitTemporal.cfg  AwaitTemporal.tla  Dispatch.cfg  Dispatch.tla  DispatchReadOnly.cfg  PluginProtocol.cfg  PluginProtocol.tla
